Update attendance calculations, payment schedules, and experience components

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="application-name" content="LIT OS" />
     <meta name="apple-mobile-web-app-title" content="LIT OS" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     
     <!-- Preconnect to external domains -->
